files/iptables/iptables@vmk-cicd-01
## Managed by Salt
## iptables/iptables@vmk-cicd-01

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:inMON  - [0:0]
:inPRIV - [0:0]
:DOCKER-USER - [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.10.3.0/24 -j inMON -m comment --comment "Management network"
-A INPUT -m limit --limit 10/min -j LOG --log-prefix "fw.INPUT " --log-level 6
-A INPUT -j DROP

-A OUTPUT -i lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 80 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 443 -j RETURN
-A OUTPUT -p tcp -m tcp --dport 123 -j RETURN
-A INPUT -m limit --limit 1/min -j LOG --log-prefix "fw.OUTPUT " --log-level 6

## Management/Monitoring network
-A inMON -p icmp -j ACCEPT
-A inMON -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
## no drop at end

## Non/docker services
-A inPRIV -p icmp -j ACCEPT
-A inPRIV -m limit --limit 10/min -j LOG --log-prefix "fw.inPRIV " --log-level 6
-A inPRIV -j REJECT --reject-with icmp-host-prohibited
## reject to ease debug

## Docker Network
-A DOCKER-USER -i lo -j RETURN
-A DOCKER-USER -m state --state RELATED,ESTABLISHED -j RETURN
-A DOCKER-USER -s 192.168.0.0/16 -o ens18 -j RETURN -m comment --comment "Outbound docker traffic"
-A DOCKER-USER -p icmp -j ACCEPT
-A DOCKER-USER -s 192.168.0.0/16 -d 192.168.0.0/16 -j RETURN -m comment --comment "Inter-docker communications"
-A DOCKER-USER -s 10.10.3.0/24 -p tcp -m tcp --dport 80 -m state --state NEW -j RETURN -m comment --comment "from_management: drone 80/tcp"
-A DOCKER-USER -s 10.10.3.0/24 -p tcp -m tcp --dport 443 -m state --state NEW -j RETURN -m comment --comment "from_management: drone 443/tcp"
-A DOCKER-USER -s 10.10.2.3/32 -p tcp -m tcp --dport 80 -m state --state NEW -j RETURN -m comment --comment "from_vmk-man-01: drone 80/tcp"
-A DOCKER-USER -s 10.10.2.3/32 -p tcp -m tcp --dport 443 -m state --state NEW -j RETURN -m comment --comment "from_vmk-man-01: drone 443/tcp"
-A DOCKER-USER -m limit --limit 1/sec -j LOG --log-prefix "fw.DOCKER "
-A DOCKER-USER -j REJECT --reject-with icmp-host-prohibited

COMMIT
