files/iptables/iptables@vmk-ext-01
## Managed by Salt
## iptables/iptables@vmk-ext-01

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:inMAN  - [0:0]
:inMON  - [0:0]
:inPRIV - [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.10.3.0/24 -j inMAN -m comment --comment "Management network"
-A INPUT -s 10.10.2.3/24 -j inMAN -m comment --comment "Management Salt"
-A INPUT -s 10.10.2.8/32 -j inMON -m comment --comment "Monitoring services"
-A INPUT -m set --match-set cf4 src -j inPRIV -m comment --comment "From cloudflare"
-A INPUT -m limit --limit 10/min -j LOG --log-prefix "fw.INPUT " --log-level 6
-A INPUT -j DROP

-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 10.10.2.3 -p tcp -m state --state NEW -m tcp --dport 4505 -j ACCEPT -m comment --comment "Saltstack Master"
-A OUTPUT -d 10.10.2.3 -p tcp -m state --state NEW -m tcp --dport 4506 -j ACCEPT -m comment --comment "Saltstack Master"
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -m limit --limit 1/min -j LOG --log-prefix "fw.OUTPUT " --log-level 6

## Management network
-A inMAN -p icmp -j ACCEPT
-A inMAN -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A inMAN -p tcp -m tcp --dport 4505 -m state --state NEW -j ACCEPT -m comment --comment "saltstack master 4505/tcp"
-A inMAN -p tcp -m tcp --dport 4506 -m state --state NEW -j ACCEPT -m comment --comment "saltstack master 4506/tcp"

## no drop at end

## Monitoring network
-A inMON -p icmp -j ACCEPT
-A inMON -d 10.10.2.6 -p tcp -m state --state NEW -m tcp --dport 9100 -j ACCEPT -m comment --comment "node_exporter: 9100/tcp"
-A inMON -d 10.10.2.6 -p tcp -m state --state NEW -m tcp --dport 8404 -j ACCEPT -m comment --comment "haproxy_exporter: 8404/tcp"
## no drop at end

## Non/docker services
-A inPRIV -p icmp -j ACCEPT
-A inPRIV -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT -m comment --comment "inbound services: 443/tcp"
-A inPRIV -m limit --limit 10/min -j LOG --log-prefix "fw.inPRIV " --log-level 6
-A inPRIV -j REJECT --reject-with icmp-host-prohibited
## reject to ease debug

COMMIT
